src/domain/app/layout/pageLayout.module.scss
@import 'breakpoints';

.pageLayout {
  --footer-koro-height: 14px;

  height: 100%;
  width: 100%;
  display: grid;
  grid-template-rows: auto 1fr auto;
  position: relative;
}

.pageBody {
  display: flex;
  align-content: flex-start;
  background-color: var(--page-background-color);
  margin-bottom: calc(0px - var(--footer-koro-height));
  padding-bottom: var(--footer-koro-height);

  &.noKoro {
    margin-bottom: 0;
    padding-bottom: 0;
  }
}

